week-8/terraform/09-firewall.tf
# ----------------------------------------------------------------
# FIREWALL
# ----------------------------------------------------------------

resource "google_compute_firewall" "allow_ssh" {
  name    = "allow-ssh"
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["0.0.0.0/0"] # Lab only

  # Dependency is implicit in the "network"" argument (references google_compute_network.main.name)
  # depends_on = [
  #   google_compute_network.main
  # ]
}

resource "google_compute_firewall" "allow_http" {
  name    = "allow-http"
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

  source_ranges = ["0.0.0.0/0"]

  # Dependency is implicit in the "network"" argument (references google_compute_network.main.name)
  # depends_on = [
  #   google_compute_network.main
  # ]
}

# Port 8080 used for custom health checks via flask app
resource "google_compute_firewall" "allow_8080" {
  name    = "allow-http-8080"
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["8080"]
  }

  source_ranges = ["0.0.0.0/0"]

  # Dependency is implicit in the "network"" argument (references google_compute_network.main.name)
  # depends_on = [
  #   google_compute_network.main
  # ]
}
